# clab

./: .gitignore  Atom.cpp  Atom.h  CMakeLists.txt  Float.cpp  Float.h  INSTALL.txt  Integer.cpp  Integer.h  Makefile  Makefile.am  Node.cpp  Node.h  Notype.cpp  Notype.h  Object.cpp  Object.h  PLANNING.txt  README.txt  StrSplit.cpp  StrSplit.h  String.cpp  String.h  Test.1  _Objects.mk  a.out  build.sh  clab.pc.in  configure.ac  main-old.cpp  main.cpp  out.txt  ps3.cmake
Test.xcodeproj/: james.mode1v3  james.pbxuser  project.pbxproj
cruft/: build.sh
special/: link-ps3.sh  ps3.cmake
src/: Atom.cpp  Atom.h  Clab.cpp  Clab.h  Clab.h.in  Clock.cpp  Clock.h  FileOps.cpp  Float.cpp  Float.h  Integer.cpp  Integer.h  Log.cpp  Log.h  Makefile.am  Manager.cpp  Manager.h  Node.cpp  Node.h  Notype.cpp  ShadowInteger.cpp  ShadowInteger.h  StrSplit.cpp  String.cpp  String.h  StringStuff.cpp  StringStuff.h  TestMachine.cpp  TestMachine.h  Time.cpp  Time.h  TypeRegistry.h  Types.cpp  Types.h  Video.cpp  Video.h  _Sources.mk  config.h.in  main.cpp  msvs_dirent.cpp
src/Atoms/: Atom.cpp  Atom.h  FastNode.cpp  FastNode.h  Float.cpp  Integer.cpp  Integer.h  Node.cpp  Node.h  NodeBase.cpp  NodeBase.h  Notype.h  OldNode.cpp  OldNode.h  ShadowInteger.cpp  String.h
src/Platform/: msvs_dirent.h
src/System/: FileOps.cpp  FileOps.h  Log.cpp  StringManip.cpp  StringManip.h  Time.cpp  Time.h  Types.cpp
src/Test/: main.cpp
